# Python-Template-Project

./: Makefile  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
projectName/cli/: __init__.py  app.py  db.py  utils.py
projectName/config/: db.py
projectName/db/: __init__.py  base.py  serializers.py  utils.py
projectName/db/alembic/: env.py
